[Fix] Added gap in flex container

--- a/client/src/pages/dashboard/Dashboard.scss
+++ b/client/src/pages/dashboard/Dashboard.scss
@@ -20,6 +20,7 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    gap: 2em;
 
   }
   
